Heading + spacing fix

--- a/P02 Team 03/css/main.css
+++ b/P02 Team 03/css/main.css
@@ -31,7 +31,11 @@ h2{
 }
 
 h3{
-  margin-top: 1rem;;
+
+}
+
+h4{
+  margin-top: 0;
 }
 
 a{
